# Etu-SuperApp

./: README.md
backend/: main.py  pyproject.toml  script.py  test_app.py
etu_super_app_1/: README.md  pubspec.yaml
etu_super_app_1/android/app/: build.gradle
etu_super_app_1/android/app/src/main/: AndroidManifest.xml
etu_super_app_1/android/app/src/main/kotlin/com/example/etu_super_app_1/: MainActivity.kt
etu_super_app_1/ios/Runner/: Info.plist
etu_super_app_1/ios/Runner.xcodeproj/: project.pbxproj
etu_super_app_1/lib/: color_constants.dart  main.dart  myconstants.dart
etu_super_app_1/lib/Pages/: home_page.dart  login_screen.dart  schedule_page.dart
etu_super_app_1/lib/Widgets/: bottom_bar.dart  general_list_table.dart  navbar.dart  schedule_item.dart  top_bar.dart
etu_super_app_1/linux/: CMakeLists.txt  my_application.cc
etu_super_app_1/macos/Runner.xcodeproj/: project.pbxproj
etu_super_app_1/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
etu_super_app_1/macos/Runner/Configs/: AppInfo.xcconfig
etu_super_app_1/test/: widget_test.dart
etu_super_app_1/web/: index.html  manifest.json
etu_super_app_1/windows/: CMakeLists.txt
etu_super_app_1/windows/runner/: Runner.rc  main.cpp
