[tool.poetry]
name = "etu-superapp"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "etu_superapp"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.29.0"
pymongo = "^4.6.3"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
